--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,17 @@
     <string name="popup_buy_sell_cancel">취소</string>
     <string name="popup_buy_confirm">매수확인</string>
     <string name="popup_sell_confirm">매도확인</string>
+
+    <!--    about fragment_chart-->
+    <string name="chart_unit_minute">분</string>
+    <string name="chart_unit_minute_1">1분</string>
+    <string name="chart_unit_minute_3">3분</string>
+    <string name="chart_unit_minute_5">5분</string>
+    <string name="chart_unit_minute_10">10분</string>
+    <string name="chart_unit_minute_30">30분</string>
+    <string name="chart_unit_minute_60">60분</string>
+    <string name="chart_unit_minute_240">240분</string>
+    <string name="chart_unit_day">일</string>
+    <string name="chart_unit_week">주</string>
+    <string name="chart_unit_month">월</string>
 </resources>
