--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,19 @@
     <string name="record_unit_price">거래단가</string>
     <string name="record_fee">수수료</string>
     <string name="record_total_price">정산금액</string>
+
+    <!--    about activity_first_setting-->
+    <string name="first_setting_title">Mobit</string>
+    <string name="first_setting_deposit_title">예수금 설정</string>
+    <string name="first_setting_deposit_info">모의투자에서 사용할 예수금을 선택하세요!</string>
+    <string name="first_setting_guide_title">이용가이드</string>
+    <string name="guide_info_1">Mobit는 가상화폐 거래소 업비트에서 제공하는 코인 정보를 활용하여 가상화폐 모의투자를 제공하고 있습니다.</string>
+    <string name="guide_info_2">Mobit는 다음과 같은 기능들을 제공합니다!</string>
+    <string name="guide_info_3">실시간 코인 가격 및 차트 제공</string>
+    <string name="guide_info_3_1">현재는 총 10개의 코인에 대하여 서비스가 제공되며, 향후 업데이트에서 코인의 종류가 추가될 예정입니다.</string>
+    <string name="guide_info_4">실시간 코인 매수 및 매도</string>
+    <string name="guide_info_4_1">현재가를 기준으로 코인 매수 및 매도가 가능합니다.</string>
+    <string name="guide_info_5">보유자산 및 거래내역 확인</string>
+    <string name="guide_info_5_1">현재 보유하고 있는 자산과 지금까지 거래했던 거래내역을 확인할 수 있습니다.</string>
+    <string name="first_setting_close">설정완료</string>
 </resources>
