--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="menu_chart">차트</string>
     <string name="menu_trade">매수/매도</string>
     <string name="menu_investment">투자내역</string>
+    <string name="menu_setting">설정</string>
 
     <!--    about fragment_coin_list-->
     <string name="coin_list_title">코인목록</string>
@@ -121,4 +122,18 @@
     <string name="guide_info_5">보유자산 및 거래내역 확인</string>
     <string name="guide_info_5_1">현재 보유하고 있는 자산과 지금까지 거래했던 거래내역을 확인할 수 있습니다.</string>
     <string name="first_setting_close">설정완료</string>
+
+    <!--    about fragment_setting-->
+    <string name="setting_title">설정</string>
+    <string name="setting_guide">Mobit 이용가이드</string>
+    <string name="setting_app_version_title">앱 버전</string>
+    <string name="setting_app_version_info">1.0.0</string>
+    <string name="setting_reset">초기화</string>
+
+    <!--    about activity_reset_confirm-->
+    <string name="reset_confirm_title">앱 초기화</string>
+    <string name="reset_confirm_cancel">취소</string>
+    <string name="reset_confirm_confirm">초기화</string>
+    <string name="reset_confirm_info1">초기화하면 다시 복구할 수 없습니다.</string>
+    <string name="reset_confirm_info2">정말로 초기화하시겠습니까?</string>
 </resources>
